# learn_fastapi

./: .gitignore  DevRoadMap.md  SIMPLE_PLAN.md  docker-compose.yml  main.py  pyproject.toml
backend/: todos.db
backend/app/: __init__.py  database.py  db.py  main.py  models.py  schemas.py  services.py  views.py
