[project]
name = "learn_fastapi"
version = "0.1.0"
description = "学习 fastapi 的示例项目"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
dependencies = ["fastapi>=0.116.1", "uvicorn[standard]>=0.35.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
