[project]
name = "learn_fastapi"
version = "0.1.0"
description = "学习 fastapi 的示例项目"
authors = [
    {name = "任伟明", email = "corejk@163.com"},
]
dependencies = ["fastapi[standard]>=0.116.1", "uvicorn[standard]>=0.35.0", "SQLAlchemy>=2.0.42", "httpx>=0.28.1", "sqlmodel>=0.0.24", "python-multipart>=0.0.20"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

